tests/miniJava/neg/003056_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = while ! 0 ; } }
